<resources>
    <string name="app_name">Sem08</string>
    <string name="et_correo">Correo</string>
    <string name="et_contraseña">Contraseña</string>
    <string name="no_login">Usuario y/o contraseña incorrectos</string>

    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="NombreLugar">Nombre del Lugar</string>
    <string name="CorreoLugar">Correo</string>
    <string name="TelefonoLugar">Telefono(8888-8888)</string>
    <string name="WebLugar">Web</string>
    <string name="btnAddLugar">Añadir Lugar</string>
    <string name="btnUpdateLugar">Actualizar Lugar</string>
    <string name="btnDeleteLugar">Eliminar Lugar</string>

    <string name="msg_AddLugar_correcto">Lugar añadido correctamente</string>
    <string name="msg_UpdateLugar_correcto">Lugar actualizado correctamente</string>
    <string name="msg_AddLugar_sinNombre">Falta ingresar el nombre</string>
    <string name="msg_DeleteLugar_correcto">Lugar eliminado correctamente</string>

</resources>